[tool.poetry]
name = "sw-utils"
version = "0.2.7"
description = "StakeWise Python utils"
authors = ["StakeWise Labs <info@stakewise.io>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^6.0.0b9"
backoff = "^2.2.1"
milagro-bls-binding = "==1.9.0"
py-ecc = "^6.0.0"
ipfshttpclient = "^0.8.0a2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.14.5"
mypy = "^0.971"
isort = "^5.10.1"
pre-commit = "^2.20.0"
Flake8-pyproject = "^1.1.0"
black = "^22.10.0"
bandit = {version = "^1.7.4", extras = ["toml"]}

[tool.bandit]
exclude_dirs = []

[tool.pylint."pre-commit-hook"]
disable=["C0103", "C0114", "C0115", "C0116", "R0801", "R0903", "W0703", "W1514"]
ignore-paths = ["^sw_utils/ssz/.*$"]

[tool.pylint."BASIC"]
good-names = ["i", "el", "e", "w", "f", "w3"]
ignored-modules=["milagro_bls_binding"]

[tool.flake8]
max-line-length = 100
select = ["E121"]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"

[[tool.mypy.overrides]]
module = "sw_utils.ssz.*"
ignore_errors = true

[tool.black]
line-length = 100
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
