[tool.poetry]
name = "sw-utils"
version = "0.6.14"
description = "StakeWise Python utils"
authors = ["StakeWise Labs <info@stakewise.io>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sw-milagro-bls-binding = "==1.9.0"
py-ecc = "^6.0.0"
ipfshttpclient = "^0.8.0a2"
web3 = "==6.15.1"
tenacity = "==8.2.3"
pyjwt = "==2.8.0"
ssz = "==0.5.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.1"
mypy = "^1.6.1"
isort = "^5.10.1"
pre-commit = "^3.5.0"
Flake8-pyproject = "^1.1.0"
black = "^23.10.0"
bandit = {version = "^1.7.4", extras = ["toml"]}
faker = "^19.11.0"
pytest = "^7"
pytest-asyncio = "^0.21.1"
flake8-print = "==5.0.0"
flake8-datetimez = "==20.10.0"
types-requests = "^2.28.11.15"

[tool.bandit]
exclude_dirs = ["sw_utils/tests/"]

[tool.pylint."pre-commit-hook"]
disable=["C0103", "C0114", "C0115", "C0116", "R0801", "R0903", "W0703", "W1514", "W0511"]
ignore-paths = ["^sw_utils/ssz/.*$"]

[tool.pylint."BASIC"]
good-names = ["i", "el", "e", "w", "f", "w3"]
ignored-modules=["milagro_bls_binding"]

[tool.flake8]
max-line-length = 100
extend-ignore = [
    "E203",  # whitespace before ':'
]
exclude = [
    "*/__init__.py",
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "sw_utils.ssz.*"
ignore_errors = true

[tool.black]
line-length = 100
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
